[tool.poetry]
name = "reverseaudio"
version = "0.1.0"
description = ""
authors = ["IamSBStakumi <bruewhite256@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydub = "^0.25.1"
ffprobe = "^0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
